add route text/plain, and update swagger to openapi3
